# nameless-config-manager

./: Cargo.toml
example/alacritty/: alacritty.toml  build.toml
example/alacritty/nested-w/: build.toml
example/mako/: build.toml  config
src/: lib.rs  main.rs
