[package]
name = "nameless-config-manager"
version = "0.0.0"
edition = "2021"

[dependencies]
globset = { version = "0.4.15", default-features = false, features = ["serde1"] }
serde = { version = "1.0.210", features = ["derive"] }
toml = { version = "0.8.19", default-features = false, features = ["parse"] }
walkdir = "2.5.0"
